# Transformers_fromScratch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: copyright-and-attribution.md  learning-log.md
notebooks/: 01_intro_attention_transformers.ipynb  02_encoders_decoders.ipynb  03_tokenizers.ipynb  04_word_embeddings.ipynb  05_positional_encodings.ipynb  06_context_window_yarn.ipynb  07_mha_gqa_mqa.ipynb  08_mla.ipynb  09_attention_masking.ipynb  10_layernorm_rmsnorm.ipynb  11_linear_layers_activations.ipynb  12_mixture_of_experts.ipynb  13_skip_connections.ipynb  14_seq2seq_translation.ipynb  15_seq2seq_attention_translation.ipynb  16_transformer_translation.ipynb  17_decoder_only_text_generation.ipynb
src/transformer_book_lab/: __init__.py  bert_embedder.py  bert_encoder.py  bpe_tokenizer.py  decoder_layer.py  encoder_layer.py  glove_embedder.py  gpt2_decoder.py  grouped_query_attention.py  learned_pe.py  masks.py  multi_head_attention.py  multi_latent_attention.py  regex_tokenizer.py  relative_position_bias.py  rope.py  rope_scaling.py  sentencepiece_tokenizer.py  sinusoidal_pe.py  tiktoken_tokenizer.py  whitespace_tokenizer.py  word2vec_embedder.py  wordpiece_tokenizer.py
tests/: conftest.py  test_bert_embedder.py  test_bert_encoder.py  test_bpe_tokenizer.py  test_decoder_layer.py  test_encoder_layer.py  test_glove_embedder.py  test_gpt2_decoder.py  test_grouped_query_attention.py  test_learned_pe.py  test_masks.py  test_multi_head_attention.py  test_regex_tokenizer.py  test_relative_position_bias.py  test_rope.py  test_rope_scaling.py  test_sentencepiece_tokenizer.py  test_sinusoidal_pe.py  test_tiktoken_tokenizer.py  test_whitespace_tokenizer.py  test_word2vec_embedder.py  test_wordpiece_tokenizer.py
