[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-book-lab"
version = "0.1.0"
description = "Chapter-by-chapter transformer learning lab built with PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Federico Bessi", email = "fperezbessi@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transformer_book_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
