[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer-book-lab"
version = "0.1.0"
description = "Chapter-by-chapter transformer learning lab built with PyTorch"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Federico Bessi", email = "fperezbessi@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
# NLP stack — needed from ch03 onward
nlp = [
    "tokenizers>=0.19",        # ch03, ch14-17 — BPE / WordPiece / SentencePiece
    "transformers>=4.40",      # ch02, ch04    — BERT, GPT-2, T5 via HuggingFace
    "datasets>=2.19",          # ch14-17       — dataset loading helpers
    "gensim>=4.3",             # ch04          — Word2Vec and GloVe loading
    "nltk>=3.8",               # ch03          — stemming, lemmatization, tokenization
    "tiktoken>=0.7",           # ch03          — OpenAI BPE tokenizer
    "sentencepiece>=0.2",      # ch03          — SentencePiece tokenizer
    "requests>=2.31",          # ch14-17       — dataset download
    "tqdm>=4.66",              # ch14-17       — training progress bars
]
# Visualization extras
viz = [
    "matplotlib>=3.8",
]
# Development and notebook tooling
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "ruff>=0.4",
    "mypy>=1.9",
]
# Install everything
all = [
    "transformer-book-lab[nlp,viz,dev]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/transformer_book_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
